fix content overflowing on mobile due to section being flex and no max width

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,11 +28,14 @@ body {
 main > section {
   padding-bottom: var(--universal-y-padding);
   padding-top: var(--universal-y-padding);
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
   & > .content {
     margin: auto;
     max-width: 1200px;
-    /*  overflow-x: clip; */
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -86,8 +89,6 @@ section.home {
 }
 
 section.details {
-  display: flex;
-  align-items: center;
   @include takeAllViewPortBelowHeader();
   transform: translateZ(
     0
